--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.5",
     "web-vitals": "^2.1.4"
   },
